--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.github.jeemv.springboot.vuejs</groupId>
   <artifactId>springboot-vuejs</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2</version>
 
   <name>springboot-vuejs</name>
   <url>https://github.com/jeeMv/SpringBoot-VueJS</url>
@@ -56,6 +56,20 @@
 	    <artifactId>jackson-databind</artifactId>
 	    <version>2.9.7</version>
 	</dependency>	
+	<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+	<dependency>
+	    <groupId>org.aspectj</groupId>
+	    <artifactId>aspectjweaver</artifactId>
+	    <version>1.9.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context</artifactId>
+	    <version>5.1.0.RELEASE</version>
+	</dependency>
+
+
   </dependencies>
 
   <profiles>
