minification bug fixed+ default values added for compo

--- a/pom.xml
+++ b/pom.xml
@@ -149,10 +149,10 @@
           <version>3.0.0</version>
         </plugin>
         <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-        <plugin>
+        <!--<plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
-        </plugin>
+        </plugin>-->
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.7.0</version>
