--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.github.jeemv.springboot.vuejs</groupId>
   <artifactId>springboot-vuejs</artifactId>
-  <version>1.0.8</version>
+  <version>1.0.9</version>
 
   <name>springboot-vuejs</name>
   <url>https://github.com/jeeMv/SpringBoot-VueJS</url>
@@ -69,6 +69,19 @@
 	    <version>5.1.0.RELEASE</version>
 	</dependency>
 
+	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-web</artifactId>
+	    <version>2.1.3.RELEASE</version>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor -->
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-configuration-processor</artifactId>
+	    <version>2.1.3.RELEASE</version>
+	</dependency>
 
   </dependencies>
 
