--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.github.jeemv.springboot.vuejs</groupId>
   <artifactId>springboot-vuejs</artifactId>
-  <version>1.0.18</version>
+  <version>1.0.19</version>
 
   <name>springboot-vuejs</name>
   <url>https://github.com/jeeMv/SpringBoot-VueJS</url>
@@ -83,6 +83,12 @@
 	    <version>2.5.5</version>
 	</dependency>
 
+	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+	<dependency>
+	    <groupId>com.fasterxml.jackson.datatype</groupId>
+	    <artifactId>jackson-datatype-jsr310</artifactId>
+	    <version>2.12.5</version>
+	</dependency>
 
   </dependencies>
 
