--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
 		<plugin>
 	      <groupId>org.apache.maven.plugins</groupId>
 	      <artifactId>maven-gpg-plugin</artifactId>
-	      <version>3.0.1</version>
+	      <version>1.6</version>
 	      <executions>
 	        <execution>
 	          <id>sign-artifacts</id>
@@ -158,6 +158,9 @@
 	          <goals>
 	            <goal>sign</goal>
 	          </goals>
+	          <configuration>
+    			<useAgent>true</useAgent>
+  		  	  </configuration>
 	        </execution>
 	      </executions>
 	    </plugin>
